force-app/main/default/objects/sked__Resource__c/fields/Casual_Employment_Statement__c.field-meta.xml
<CustomField>
    <fullName>Casual_Employment_Statement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>No longer used, removed off layout and Onboarding form as advised by Steph in October 2024. 
Employee confirmation that they have read, understood and agreed to &quot;Casual Employment Information Statement&quot;, while completing Onboarding form.</description>
    <inlineHelpText>No longer used, removed off layout and Onboarding form as advised by Steph in October 2024.</inlineHelpText>
    <label>Archived_Casual Employment Statement</label>
    <type>Checkbox</type>
</CustomField>