force-app/main/default/objects/sked__Resource__c/fields/Child_Safety_Code_of_Conduct__c.field-meta.xml
<CustomField>
    <fullName>Child_Safety_Code_of_Conduct__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Coaching Casual staff confirmation that they have read, understood and agreed to &quot; Elevate Education Child Safety Code of Conduct&quot;, while completing Onboarding form.</description>
    <inlineHelpText>Child Safety Code of Conduct for Coaches</inlineHelpText>
    <label>Child Safety Code of Conduct</label>
    <type>Checkbox</type>
</CustomField>