force-app/main/default/objects/sked__Resource__c/fields/Child_Safety_Training_date__c.field-meta.xml
<CustomField>
    <fullName>Child_Safety_Training_date__c</fullName>
    <description>Date of Completion of Child Safety Litmos Training</description>
    <inlineHelpText>Date of Completion of Child Safety Litmos Training</inlineHelpText>
    <label>Child Safety Training date</label>
    <type>Date</type>
</CustomField>