force-app/main/default/objects/sked__Resource__c/fields/Employee_Status__c.field-meta.xml
<CustomField>
    <fullName>Employee_Status__c</fullName>
    <formula>IF( AND(Probation_End_Date__c &gt; Today()), &quot;On Probation&quot;,
IF ( NOT(ISBLANK(End_Date__c)), &quot;Alumni&quot;, 
 &quot;Regular Employee&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Status</label>
    <type>Text</type>
</CustomField>