force-app/main/default/objects/sked__Resource__c/fields/Home_Address_anon__c.field-meta.xml
<CustomField>
    <fullName>Home_Address_anon__c</fullName>
    <formula>MID( 

  sked__Home_Address__c ,

  FIND(&apos;,&apos;, sked__Home_Address__c ) + 1,

  LEN(sked__Home_Address__c ) - FIND(&apos;,&apos;, sked__Home_Address__c )

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Home Address (anon)</label>
    <type>Text</type>
</CustomField>