force-app/main/default/objects/sked__Resource__c/fields/Probation_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Probation_End_Date__c</fullName>
    <description>Start Date + 6 Months. To revert just clear the value and will return to Initial Probation Date</description>
    <inlineHelpText>Start Date + 6 Months.</inlineHelpText>
    <label>Probation End Date</label>
    <type>Date</type>
</CustomField>