force-app/main/default/objects/sked__Resource__c/fields/References_Validated__c.field-meta.xml
<CustomField>
    <fullName>References_Validated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>References Validated</label>
    <type>Checkbox</type>
</CustomField>